@@ -1,3 +1,9 @@
+= CHANGELOG
+
+== Unreleased
+
+ * Switch `geo` dependency to the `geo-types` crate (v0.4)
+
 == v0.3.0 
 
  * Upgraded dependencies:
